# Provenance

./: .clang-format  .codiumignore  .cursorignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .rubocop.yml  .rubocop_cocoapods.yml  .rubocop_todo.yml  .swift-format  .swiftformat  .swiftformat-version  .swiftlint.yml  .travis.yml  .xcovignore  4RV25Y955C.cer  AppStore_info.descom-online.provenance.mobileprovision  Build-Lite-iOS.xcconfig  Build-Lite-tvOS.xcconfig  Build-iOS.xcconfig  Build-tvOS.xcconfig  Build.xcconfig  CHANGELOG.md  CONTRIBUTORS.md  Cartfile  Cartfile.resolved  CodeSigning.xcconfig  CodeSigning.xcconfig.sample  ControllerDriver.entitlements  DEVELOPER.md  Dangerfile  Dangerfile.swift  ExportOptions.plist  Gemfile  LICENSE.md  Makefile  PVLibrary.podspec  PVSupport.podspec  Package.resolved  (+37 more)
CoresRetro/RetroArch/lhasa/: .travis.yml  ChangeLog  Makefile.am  NEWS  TODO  autogen.sh  configure.ac  gencov  liblhasa.pc.in  rpm.spec.in
Mednafen/mednafen/: FileStream.cpp  FileStream.h  IPSPatcher.cpp  Makefile.am  Makefile.in  MemoryStream.cpp  MemoryStream.h  PSFLoader.cpp  PSFLoader.h  SNSFLoader.cpp  SNSFLoader.h  SPCReader.cpp  SPCReader.h  Stream.cpp  Stream.h  debug.cpp  debug.h  dis6502.cpp  endian.cpp  endian.h  error.cpp  error.h  file.cpp  file.h  general.cpp  general.h  git.cpp  git.h  math_ops.h  mednafen-driver.h  mednafen.cpp  mednafen.h  memory.cpp  memory.h  mempatcher-driver.h  mempatcher.cpp  movie.cpp  netplay-driver.h  netplay.cpp  netplay.h  (+15 more)
Mednafen/mednafen-1.21/: ChangeLog  Makefile  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac
Mednafen/mednafen-1.21/Documentation/: cdplay.html  debugger.html  fname_format.txt  gb.html  gba.html  gg.html  lynx.html  md.html  mednafen.html  modules.def  nes.html  netplay.html  netplay.php  ngp.html  pce.html  pce_fast.html  pcfx.html  psx.html  settings.def  sms.html  snes.html  snes_faust.html  ss.html  ss.php  ssfplay.html  vb.html  wswan.html  wswan.php
Mednafen/mednafen-1.21/include/: SDL_opengl.h  SDL_opengles2.h  SDL_revision.h  config.h  config.h.in
Mednafen/mednafen-1.21/intl/: VERSION
Mednafen/mednafen-1.21/m4/: sdl2.m4
Mednafen/mednafen-1.21/mswin/: build-toolchain.sh  package-mednafen.sh
Mednafen/mednafen-1.21/po/: Makefile  Makefile.in  POTFILES  de.gmo  de.po  es.gmo  es.po  mednafen.pot  ru.gmo  ru.po
Mednafen/mednafen-1.21/src/: FileStream.h  IPSPatcher.h  Makefile  Makefile.am  Makefile.in  MemoryStream.cpp  MemoryStream.h  PSFLoader.cpp  PSFLoader.h  SNSFLoader.cpp  SNSFLoader.h  SSFLoader.h  Stream.cpp  Stream.h  Time.h  debug.cpp  debug.h  endian.cpp  error.cpp  file.cpp  file.h  general.cpp  general.h  lepacker.h  mednafen.cpp  memory.cpp  mempatcher.cpp  movie.cpp  netplay-driver.h  netplay.h  qtrecord.cpp  settings-common.h  settings-driver.h  settings.cpp  settings.h  state.cpp  state.h  state_rewind.cpp  tests.cpp  types.h
Mednafen/mednafen/cdplay/: Makefile.am  Makefile.in  cdplay.cpp
Mednafen/mednafen/cdrom/: CDAFReader.cpp  CDAFReader.h  CDAFReader_MPC.cpp  CDAFReader_MPC.h  CDAFReader_SF.cpp  CDAFReader_SF.h  CDAFReader_Vorbis.cpp  CDAFReader_Vorbis.h  CDAccess.cpp  CDAccess.h  CDAccess_CCD.cpp  CDAccess_CCD.h  CDAccess_Image.cpp  CDAccess_Image.h  CDUtility.cpp  CDUtility.h  Makefile.am.inc  SimpleFIFO.h  cdromif.cpp  cdromif.h  dvdisaster.h  recover-raw.cpp  scsicd-pce-commands.inc  scsicd.cpp  scsicd.h
Mednafen/mednafen/compress/: GZFileStream.cpp  GZFileStream.h  Makefile.am.inc  ZLInflateFilter.cpp  ZLInflateFilter.h
Mednafen/mednafen/cputest/: x86_cpu.c
Mednafen/mednafen/demo/: Makefile.am  Makefile.in  demo.cpp
Mednafen/mednafen/desa68/: Makefile.am  Makefile.in  desa68.c
Mednafen/mednafen/drivers/: Joystick.cpp  Joystick_DX5.cpp  Joystick_Linux.cpp  Joystick_SDL.cpp  Joystick_SDL.h  Joystick_XInput.h  Makefile.am  Makefile.in  NetClient.h  NetClient_POSIX.cpp  NetClient_WS2.cpp  NetClient_WS2.h  args.cpp  cheat.cpp  cheat.h  console.cpp  console.h  debugger.cpp  ers.cpp  fps.cpp  gfxdebugger.cpp  gfxdebugger.h  help.cpp  hq2x.cpp  input-config.cpp  input-config.h  input-default-buttons.h  input.cpp  input.h  logdebugger.cpp  logdebugger.h  main.cpp  main.h  memdebugger.cpp  memdebugger.h  netplay.cpp  netplay.h  nnx.cpp  nnx.h  opengl.h  (+12 more)
Mednafen/mednafen/drivers_dos/: Makefile.am  Makefile.in  Video.h  Video_VGA.cpp  args.h  ers.h  input-default-buttons.h  input.cpp  main.cpp  main.h  nnx.cpp  nnx.h  nongl.cpp  video.cpp
Mednafen/mednafen/gb/: Makefile.am  Makefile.in  gb.cpp  gb.h  gbCodes.h  gfx.cpp  sound.cpp  sound.h  z80.cpp
Mednafen/mednafen/gba/: GBA.cpp  GBAinline.h  Gfx.cpp  Gfx.h  Globals.cpp  Globals.h  Makefile.am  Makefile.in  Mode0.cpp  RTC.cpp  Sound.cpp  eeprom.cpp  flash.h  gfx-draw.h  sram.cpp
Mednafen/mednafen/hash/: Makefile.am.inc  md5.cpp  sha1.cpp  sha1.h  sha256.cpp  sha256.h
Mednafen/mednafen/hw_cpu/: Makefile.am  Makefile.in
Mednafen/mednafen/hw_misc/: Makefile.am  Makefile.in
Mednafen/mednafen/hw_sound/: Makefile.am  Makefile.in
Mednafen/mednafen/hw_video/: Makefile.am  Makefile.in
Mednafen/mednafen/lynx/: Makefile.am  Makefile.in  c65c02.h  cart.cpp  memmap.cpp  mikie.cpp  mikie.h  ram.h  rom.cpp  rom.h  susie.cpp  system.cpp  system.h
Mednafen/mednafen/md/: Makefile.am  Makefile.in  genesis.cpp  genesis.h  genio.cpp  genio.h  header.cpp  hvc.h  mem68k.cpp  mem68k.h  memvdp.cpp  shared.h  sound.cpp  sound.h  system.cpp  system.h  vdp.cpp  vdp.h  vdp_run.inc
Mednafen/mednafen/mpcdec/: Makefile.am  Makefile.in  datatypes.h  mpc_demux.c
Mednafen/mednafen/nes/: Makefile.am  Makefile.in  cart.cpp  cart.h  debug.cpp  debug.h  fds-sound.cpp  fds-sound.h  fds.cpp  fds.h  filter.cpp  filter.h  ines-correct.inc  ines.cpp  ines.h  input.cpp  nes.cpp  nes.h  nsf.cpp  nsf.h  nsfe.cpp  ops.h  sound.cpp  sound.h  unif.cpp  unif.h  vsuni.cpp  vsuni.h  (+2 more)
PVYabause/mini18n/: CMakeLists.txt  ChangeLog  README
PVYabause/yabause/: AUTHORS  CMakeLists.txt  README.DC  README.LIN  YabauseGameCore.h  YabauseGameCore.m
PVYabause/yabauseut/: CMakeLists.txt  ChangeLog  TODO  YabauseGameCore.swift
(+23513 files in other folders)
